name:                evolution
version:             0.1.0.0
synopsis:            Biomorph evolution simulation
build-type:          Simple
cabal-version:       >=1.10

executable evolution
  main-is:             Main.hs
  other-modules:       Evolution.Types,
                       Evolution.Biomorph,
                       Evolution.Render,
                       Evolution.Fitness,
                       Evolution.Evolution
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       random,
                       JuicyPixels,
                       vector,
                       filepath,
                       directory,
                       primitive,
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N